-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

August 21 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Corrected a crash which occurred while wearing a Decos ad shirt
  * Ommel cerumen can no longer be wished

August 21 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Children no longer spoil
  * Items can now be hasted and slowed to speed or slow their spoiling
  * Corrected a bug in the scroll of change material code

August 17 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Implemented alcoholic guards

August 17 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * A small bug correction in the lookmode

August 17 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * You can now gift stuff to Petrus's wives
  * Some small balancing

August 16 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Added first-born sons and daughters
	
August 16 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added lots of new zombies, skeletons and ghosts

August 15 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * The RAND_N function is now correct
  * Monsters are now generated in the catacombs

August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * added zombie of khaz-zadm

August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * coffin (looks are bad) added to catacomb
	
August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Added can materials (now works)
  * Added stairs to catacomb

August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Added can materials
	
July 16 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added a smiley to the "Unfortunately you died." screen
